# drfrohlichwebsite

./: README.md  app.py  package-lock.json  package.json  pyproject.toml
client/: package-lock.json  package.json
client/src/: App.vue  main.js
client/src/assets/styles/: custom.css
client/src/components/: AboutMe.vue  Books.vue  ContactDetails.vue  Dashboard.vue  Directions.vue  FAQ.vue  FeeGuidelines.vue  Gynaecology.vue  Navbar.vue  Obstetrics.vue  OffersAndProcedures.vue  Ping.vue  ReviewsAndTestimonials.vue
client/src/router/: index.js
drfrohlich_website/: app.py
