[tool.poetry]
name = "drfrohlich_website"
version = "0.1.0"
description = "Dr Frohlich Website Packages"
authors = ["michael <michael.frohlich@allangrayorbis.org>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
black = "^20.8b1"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
